# live_the_code_demo

./: Cargo.toml  README.md
cloudinary-rs/: Cargo.toml
cloudinary-rs/src/: lib.rs  tests.rs
entity/src/entities/: image.rs  mod.rs  prelude.rs  profile.rs  token.rs  user.rs
migration/: Cargo.toml
migration/src/: config.rs  lib.rs  m20230824_110340_create_user_table.rs  m20230824_220114_create_image_table.rs  m20230825_171205_alter_image_add_public_id.rs  m20230826_123626_create_profile_table.rs  m20230827_102253_create_token_table.rs
src/: context.rs  main.rs
src/graphql/: mod.rs  schema.rs
src/graphql/common/: types.rs
src/graphql/images/: ai_models.rs  db_manager.rs  generator.rs  mod.rs  mutations.rs  types.rs
src/graphql/images/utils/: ai_models.rs  db_manager.rs  generator.rs  mod.rs  uploader.rs
src/graphql/users/: mod.rs  mutations.rs  types.rs
src/graphql/users/auth/: types.rs  utils.rs
src/graphql/users/types/: mod.rs  profile.rs  token.rs  user.rs
src/graphql/users/utils/: db_manager.rs
src/routes/: graphql.rs  utils.rs
