[workspace]
members = [".", "migration", "entity", "cloudinary"]

[package]
name = "graphql_server"
version = "0.1.0"
edition = "2021"
authors = ["Ezekiel Victor <codeepoch@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
cloudinary = { path = "cloudinary" }
actix-web = "4.3.1"
async-graphql = "6.0.4"
async-graphql-actix-web = "6.0.4"
derive_more = "0.99.17"
dotenv = "0.15.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "macros", "with-uuid", "debug-print"] }
serde = { version = "1.0.186", features = ["derive"] }
sea-orm-migration = "0.12.2"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
env_logger = "0.10.0"
anyhow = "1.0.75"
